Updated the code

--- a/array.yml
+++ b/array.yml
@@ -4,6 +4,7 @@
    hosts: webservers
    vars:
      myfiles: ['file1.txt', 'file2.txt', 'file3.txt', 'file4.txt']
+     mydir: ['devops', 'devops1']
 
 # TASK SECTION
    tasks:
@@ -13,3 +14,11 @@
          state: file
          mode: 0600
        with_items: "{{ myfiles }}"
+
+     - name: To create 2 directories
+       file:
+         path: /opt/{{ item }}
+         state: directory
+         mode: 0644
+         recurse: yes
+       with_items: "{{ mydir }}"
