--- a/roles/apache.yml
+++ b/roles/apache.yml
@@ -1,11 +1,6 @@
 ---
 # Header Section
  - name: This simple yaml file will call apache role
-   hosts: webservers
-   vars:
-     myname: Kumar
-     http_port: 81
-
+   hosts: all
    roles:
      - apache
-
