--- a/forloop.yml
+++ b/forloop.yml
@@ -13,12 +13,13 @@
        with_items:
          - file1.txt
          - file2.txt
+         - myfile.sh
 
      - name: To install 2 packages
        yum:
          name: "{{ item }}"
 #         name: [u'unzip', u'wget']
-         state: absent
+         state: removed
        with_items:
          - wget
          - unzip
